# kmcp

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTION.md  DEVELOPMENT.md  Dockerfile  Makefile  PROJECT  README.md  SECURITY.md  TEMPLATE_REFACTOR.md  go.mod  go.sum
.github/workflows/: lint.yml  tag.yaml  test-e2e.yml
api/v1alpha1/: groupversion_info.go  mcpserver_types.go  zz_generated.deepcopy.go
cmd/: main.go
cmd/kmcp/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml
config/manager/: kustomization.yaml  manager.yaml
config/rbac/: mcpserver_admin_role.yaml  mcpserver_editor_role.yaml  mcpserver_viewer_role.yaml  role.yaml
config/samples/: kustomization.yaml  mcpserver-production-security.yaml  mcpserver-serviceaccount-irsa.yaml  v1alpha1_mcpserver.yaml
design/: template.md
devel/architecture/: workflow.md
devel/quickstart/: README.md  package-existing-service.md
examples/fastmcp-python-basic/: Dockerfile  README.md  pyproject.toml
examples/fastmcp-python-basic/fastmcp_python_basic/: __init__.py  server.py
examples/mcp-authentication/: README.md  github-mcp-server.yaml
helm/kmcp/: .helmignore  Chart.yaml  README.md  values.yaml
helm/kmcp-crds/: Chart.yaml
internal/controller/: mcpserver_controller.go  mcpserver_controller_test.go  suite_test.go
pkg/agentgateway/: agentgateway_configmap.yaml  agentgateway_configmap_http.yaml  agentgateway_configmap_stdio.yaml  agentgateway_deployment.yaml  agentgateway_deployment_http.yaml  agentgateway_deployment_stdio.yaml  (+8 more)
pkg/app/: app.go  (+1 more)
scripts/: get-kmcp.sh
(+164 files in other folders)
